Fixé: Exception si url contient des espaces blancs.
git-svn-id: svn://www.sonsofexiled.fr/repository/ArmA3Sync/trunk@838 73b07b11-db6f-9345-a1c1-cd074a5028ff